[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zeplin_cash"
version = "0.0.1"
authors = [
  { name="George Saussy", email="me@georgesaussy.com" },
]
description = "A small accounting library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/GeorgeSaussy/zeplin_cash"